--- a/src/styles.css
+++ b/src/styles.css
@@ -1,65 +1,109 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap");
 
 body {
-    font-family: "Poppins", sans-serif;
-    background: linear-gradient(135deg, #E0ECFF, #FFFFFF 70%);
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    width: 100vw;
+  font-family: "Poppins", sans-serif;
+  background: linear-gradient(135deg, #E0ECFF, #FFFFFF 70%);
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
 }
 
 .container {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.title {
+  text-align: center;
+  font-size: 36px;
+  margin-bottom: 16px;
+  color: #1e3c72;
+  font-weight: 600;
+  margin-top: 20px;
+}
+
+.subtitle {
+  font-size: 18px;
+  font-weight: 500;
+  color: #333333;
+  margin-bottom: 8px;
 }
 
 .table-container {
-    overflow-x: auto;
-    margin-bottom: 48px;
+  overflow-x: auto;
+  margin-bottom: 48px;
 }
 
 table {
-    width: 100%;
-    border-collapse: collapse;
-    font-size: 14px;
+  width: 100%;
+  border-collapse: collapse;
+  font-size: 14px;
+  margin-top: 100px; /* 추가:테이블 위로 여백 추가 */
 }
 
 th,
 td {
-    border: 2px solid #A8D8EA;
-    text-align: left;
-    padding: 8px;
+  border: 2px solid #A8D8EA;
+  text-align: left;
+  padding: 8px;
 }
 
 th {
-    background-color: #CAE8F9;
-    font-weight: bold;
-    color: #1e3c72;
+  background-color: #CAE8F9;
+  font-weight: bold;
+  color: #1e3c72;
 }
 
 td {
-    background-color: #FFFFFF;
+  background-color: #FFFFFF;
 }
 
 .horizontal-text {
-    white-space: nowrap;
+  white-space: nowrap;
 }
 
-.title {
-    text-align: center;
-    font-size: 36px;
-    margin-bottom: 16px;
-    color: #1e3c72;
-    font-weight: 600;
+#search-link {
+  display: flex;
+  align-items: center; /* 추가: 아이콘과 텍스트를 수직 정렬 */
+  padding: 8px 16px;
+  background-color: #6fd3f1;
+  color: #121212;
+  border: none;
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: bold;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+  margin-bottom: 20px;
+  margin-right: 20px;
+  float: left;
 }
 
-.subtitle {
-    font-size: 18px;
-    font-weight: 500;
-    color: #333333;
-    margin-bottom: 8px;
+#search-link:hover {
+  background-color: #4ec2e6;
 }
+
+#nodes-graph {
+    position: static;
+  }
+  #nodes-graph-title {
+    display: inline-block;
+    padding: 8px 16px;
+    background-color: #6fd3f1;
+    color: #121212;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: bold;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    margin-left: 20px;
+  }
+  
+  #nodes-graph-title:hover {
+    background-color: #4ec2e6;
+  }
